--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,13 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^35.0.0",
+    "expo": "^51.0.11",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
-    "react-native-reanimated": "~1.2.0",
-    "react-native-web": "^0.11.7",
+    "react-native-reanimated": "^3.12.0",
+    "react-native-web": "^0.19.12",
     "react-navigation": "^4.0.10"
   },
   "devDependencies": {
